[package]
name = "zenoh-pico-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
zenoh-protocol = { git = "https://github.com/Hennzau/zenoh", branch = "result_no_std", version = "1.5.0", default-features = false }
zenoh-result = { git = "https://github.com/Hennzau/zenoh", branch = "result_no_std", version = "1.5.0", default-features = false }
